--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,20 @@
 {
-    "liveServer.settings.port": 5501,
-    "python-envs.defaultEnvManager": "ms-python.python:conda",
-    "python-envs.defaultPackageManager": "ms-python.python:conda",
-    "python-envs.pythonProjects": []
+  "yaml.customTags": [
+    "!Ref",
+    "!Sub",
+    "!GetAtt",
+    "!FindInMap",
+    "!Join",
+    "!Select",
+    "!Split",
+    "!GetAZs",
+    "!ImportValue",
+    "!Condition",
+    "!Equals",
+    "!If",
+    "!Not",
+    "!And",
+    "!Or",
+    "!Base64"
+  ]
 }
