--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 env:
-  AWS_REGION: ap-southeast-2
+  AWS_REGION: ap-south-1
   ECR_REPOSITORY: documentportal
   ECS_SERVICE: document-portal-service
   ECS_CLUSTER: document-portal-cluster
